# IF4051-UTS

./: .gitignore
back-end/: Cargo.toml
back-end/src/: main.rs
back-end/src/entity/: constants.rs  device.rs  error.rs  mod.rs  state.rs
back-end/src/mqtt/: mod.rs  mqtt_client.rs  topic.rs
back-end/src/tasks/: channel_type.rs  mod.rs
back-end/src/view/: index.html
back-end/src/view/assets/: index-140fe2c3.js  index-22abc5a3.css
back-end/src/websocket/: mod.rs  state.rs  ws_session.rs
back-end/src/websocket/server/: mod.rs  requests.rs  structs.rs  ws_server.rs
back-end/src/websocket/server/handlers/: connection.rs  mod.rs  status.rs  switch.rs  timer.rs
back-end/src/websocket/session/: mod.rs  responses.rs  ws_session.rs
docs/: laporan.tex
esp32/: .gitignore  platformio.ini
esp32/include/: constants.example.h  constants.h  constants_secret.example.h
esp32/lib/utils/: utils.cpp  utils.h  utils.hpp
esp32/src/: main.cpp
front-end/: index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
front-end/src/: App.tsx  Device.tsx  index.css  spinner.tsx  types.ts
